<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Frag1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/fragment1_text"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_alarm"
        android:translationY="100dp" />

    <Button
        android:id="@+id/btn_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_browser"
        android:translationY="120dp" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_contact"
        android:translationY="140dp" />
    <Button
        android:id="@+id/btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:translationY="160dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="36dp"
        android:text="get Text"
        android:translationY="180dp" />

    <TextView
        android:id="@+id/getter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="12dp"
        android:text="Get text"
        android:translationY="200dp" />

</LinearLayout>